follow up build

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -25,6 +25,9 @@ $borderradius: 4px;
 @import 'global';
 @import 'header';
 @import 'home';
+@import 'about';
+@import 'contact';
+@import '404';
 @import 'forms';
 @import 'footer';
 @import 'modelviewer';
