--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,20 @@
 /* -------------------------------------------------------------------------------------------- */
+/* Footer ---------------------------------------------- */
+/* -------------------------------------------------------------------------------------------- */
+#footer-spacer {width: 100%; height: 65px; background: $primary;}
+footer {
+  position: relative;
+  overflow: hidden;
+  z-index: 70;
+  display: block;
+  width: 100%;
+  background: $primary;
+}
+footer a {color: $black;}
+footer a:hover {color: $secondary;}
+
+
+/* -------------------------------------------------------------------------------------------- */
 /* Accreditations ---------------------------------------------- */
 /* -------------------------------------------------------------------------------------------- */
 .accreditations {line-height: 1em;}
@@ -20,22 +36,6 @@
   transition: all 0.25s ease;
 }
 .accreditations-link:hover img {opacity: 0.65;}
-
-
-/* -------------------------------------------------------------------------------------------- */
-/* Footer ---------------------------------------------- */
-/* -------------------------------------------------------------------------------------------- */
-#footer-spacer {width: 100%; height: 65px; background: $primary;}
-footer {
-  position: relative;
-  overflow: hidden;
-  z-index: 70;
-  display: block;
-  width: 100%;
-  background: $primary;
-}
-footer a {color: $black;}
-footer a:hover {color: $secondary;}
 
 
 /* -------------------------------------------------------------------------------------------- */
@@ -159,7 +159,7 @@ footer a:hover {color: $secondary;}
 
 @media screen and (min-width: 1080px) {
 
-  footer {
+  #footer-columns {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
