--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -5,17 +5,8 @@
   width: 100%;
   margin: 0 0 16px;
 }
-
-.form-row {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: space-between;
-}
-.form-row .form-field {
-  width: 49%;
-}
+.form-row {display: block;}
+.form-row .form-field {width: 100%;}
 form h2 {margin-top: 0;}
 
 
@@ -43,11 +34,12 @@ form h2 {margin-top: 0;}
   width: 100%;
   margin: 0;
   padding: 12px 16px;
-  border: 1px solid transparent;
-  background: rgba($white, 0.25);
+  border: 1px solid $black;
+  border-radius: $borderradius !important;
+  background: transparent;
   outline: none;
-  color: $white;
-  font-size: 21px;
+  color: $black;
+  font-size: 14px;
   line-height: 1.25em;
   -webkit-transition: all 0.25s ease;
   -moz-transition: all 0.25s ease;
@@ -55,25 +47,6 @@ form h2 {margin-top: 0;}
   transition: all 0.25s ease;
   -webkit-appearance: none;
   -webkit-border-radius: 0px;
-}
-#container .bg-white input[type=color], 
-#container .bg-white input[type=date], 
-#container .bg-white input[type=datetime-local], 
-#container .bg-white input[type=datetime], 
-#container .bg-white input[type=email], 
-#container .bg-white input[type=month], 
-#container .bg-white input[type=number], 
-#container .bg-white input[type=password], 
-#container .bg-white input[type=search], 
-#container .bg-white input[type=tel], 
-#container .bg-white input[type=text], 
-#container .bg-white input[type=time], 
-#container .bg-white input[type=url], 
-#container .bg-white input[type=week], 
-#container .bg-white select, 
-#container .bg-white textarea {
-  border-color: $primary;
-  color: $black;
 }
 #container input[type=color]:focus, 
 #container input[type=date]:focus, 
@@ -91,35 +64,12 @@ form h2 {margin-top: 0;}
 #container input[type=week]:focus, 
 #container select:focus, 
 #container textarea:focus {
-  border-color: $primary;
-  background: rgba($white, 0.125);
-}
-#container .bg-white input[type=color]:focus, 
-#container .bg-white input[type=date]:focus, 
-#container .bg-white input[type=datetime-local]:focus, 
-#container .bg-white input[type=datetime]:focus, 
-#container .bg-white input[type=email]:focus, 
-#container .bg-white input[type=month]:focus, 
-#container .bg-white input[type=number]:focus, 
-#container .bg-white input[type=password]:focus, 
-#container .bg-white input[type=search]:focus, 
-#container .bg-white input[type=tel]:focus, 
-#container .bg-white input[type=text]:focus, 
-#container .bg-white input[type=time]:focus, 
-#container .bg-white input[type=url]:focus, 
-#container .bg-white input[type=week]:focus, 
-#container .bg-white select:focus, 
-#container .bg-white textarea:focus {
   border-color: $secondary;
 }
 
-::placeholder {color: $white; opacity: 1;}
-:-ms-input-placeholder {color: $white;}
-::-ms-input-placeholder {color: $white;}
-
-.bg-white ::placeholder {color: $primary; opacity: 1;}
-.bg-white :-ms-input-placeholder {color: $primary;}
-.bg-white ::-ms-input-placeholder {color: $primary;}
+::placeholder {color: $black; opacity: 1;}
+:-ms-input-placeholder {color: $black;}
+::-ms-input-placeholder {color: $black;}
 
 
 /* -------------------------------------------------------------------------------------------- */
@@ -130,17 +80,30 @@ form h2 {margin-top: 0;}
   overflow: hidden;
   display: block;
 }
+#container .select-field .wpcf7-form-control-wrap:before {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1;
+  width: 44px;
+  height: 100%;
+  border-radius: 0 4px 4px 0;
+  background: $black;
+  pointer-events: none;
+}
 #container .select-field .wpcf7-form-control-wrap:after {
   content: '';
   position: absolute;
   right: 16px;
   top: 50%;
+  z-index: 2;
   margin-top: -4px;
   width: 0;
   height: 0;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
-  border-top: 8px solid $black;
+  border-top: 8px solid $white;
   pointer-events: none;
 }
 
@@ -149,7 +112,11 @@ form h2 {margin-top: 0;}
 /* -------------------------------------------------------------------------------------------- */
 /* Validation ---------------------------------------------- */
 /* -------------------------------------------------------------------------------------------- */
-#container .wpcf7-not-valid-tip {color: $danger;}
+#container .wpcf7-not-valid-tip {
+  color: $danger;
+  font-size: $smallfont;
+  line-height: $lineheight;
+}
 
 #container .wpcf7 form.invalid .wpcf7-response-output, 
 #container .wpcf7 form.unaccepted .wpcf7-response-output, 
@@ -172,29 +139,52 @@ form h2 {margin-top: 0;}
 .recaptcha-message {
   font-size: 0.6em;
   line-height: 1.2em;
-  color: $primary;
+  color: $grey;
 }
-.recaptcha-message a {color: $primary;}
-.recaptcha-message a:hover {color: $white;}
-.bg-white .recaptcha-message {color: $primary;}
-.bg-white .recaptcha-message a {color: $secondary;}
-.bg-white .recaptcha-message a:hover {color: $black;}
+.recaptcha-message a {color: $grey;}
+.recaptcha-message a:hover {color: $black;}
 
 
 /* -------------------------------------------------------------------------------------------- */
 /* Submit ---------------------------------------------- */
 /* -------------------------------------------------------------------------------------------- */
-#container .form-submit {margin: 24px 0; text-align: center;}
-#container .form-submit input {
+#container .form-submit {
+  overflow: hidden;
   display: inline-block;
-  padding: 5px 40px 10px;
+  padding: 0;
+  margin: 24px 0;
+  border: 1px solid $black;
+  border-radius: $borderradius;
+  text-align: center;
+}
+#container .form-submit:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: $black;
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+#container .form-submit:hover:after {background: $dark;}
+#container .form-submit p {position: relative; z-index: 3;}
+#container .form-submit input {
+  z-index: 3;
+  display: block;
+  width: 100%;
+  padding: 10px 40px;
   margin: 0;
-  border: 3px solid $secondary;
-  border-radius: 12px;
+  border: none;
   outline: none;
-  background: $secondary;
+  background: none;
   font-family: $sans;
-  font-size: 2em;
+  font-size: 1em;
   font-weight: 700;
   color: $white;
   text-transform: uppercase;
@@ -204,24 +194,112 @@ form h2 {margin-top: 0;}
   -o-transition: all 0.25s ease;
   transition: all 0.25s ease;
 }
-#container .form-submit input:hover {
-  border-color: $white; 
-  background: transparent;
+
+.form-submit:hover .button-duck-walk {z-index: 2; opacity: 1;}
+.form-submit:hover .button-duck-walk svg:nth-child(1) {animation: duckwalk 1.5s 1 0.25s;}
+.form-submit:hover .button-duck-walk svg:nth-child(2) {animation: duckwalk 1.5s 1 0.5s;}
+.form-submit:hover .button-duck-walk svg:nth-child(3) {animation: duckwalk 1.5s 1 0.75s;}
+.form-submit:hover .button-duck-walk svg:nth-child(4) {animation: duckwalk 1.5s 1 1s;}
+.form-submit:hover .button-duck-walk svg:nth-child(5) {animation: duckwalk 1.5s 1 1.25s;}
+.form-submit:hover .button-duck-walk svg:nth-child(6) {animation: duckwalk 1.5s 1 1.5s;}
+.form-submit:hover .button-duck-walk svg:nth-child(7) {animation: duckwalk 1.5s 1 1.75s;}
+.form-submit:hover .button-duck-walk svg:nth-child(8) {animation: duckwalk 1.5s 1 2s;}
+.form-submit:hover .button-duck-walk svg:nth-child(9) {animation: duckwalk 1.5s 1 2.25s;}
+.form-submit:hover .button-duck-walk svg:nth-child(10) {animation: duckwalk 1.5s 1 2.5s;}
+.form-submit:hover .button-duck-walk svg:nth-child(11) {animation: duckwalk 1.5s 1 2.75s;}
+.form-submit:hover .button-duck-walk svg:nth-child(12) {animation: duckwalk 1.5s 1 3s;}
+@keyframes duckwalk {
+  0% {opacity: 1;}
+  50% {opacity: 1;}
+  100% {opacity: 0;}
 }
-#container .bg-white .form-submit input:hover {
-  border-color: $secondary;
-  color: $secondary; 
-  background: $white;
-}
+.form-submit .button-duck-walk svg {fill: $black;}
+
 #container .form-submit .wpcf7-spinner {display: none;}
 
 
 
 
-@media screen and (max-width: 560px) {
+@media screen and (min-width: 540px) {
 
-  .form-row {display: block;}
-  .form-row .form-field {width: 100%;}
+  .form-row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: space-between;
+  }
+  .form-row .form-field {width: 49%;}
+
+  #container input[type=color], 
+  #container input[type=date], 
+  #container input[type=datetime-local], 
+  #container input[type=datetime], 
+  #container input[type=email], 
+  #container input[type=month], 
+  #container input[type=number], 
+  #container input[type=password], 
+  #container input[type=search], 
+  #container input[type=tel], 
+  #container input[type=text], 
+  #container input[type=time], 
+  #container input[type=url], 
+  #container input[type=week], 
+  #container select, 
+  #container textarea {
+    font-size: 16px;
+  }
+
+}
+
+
+
+@media screen and (min-width: 767px) {
+
+  /* General ---------------------------------------------- */
+  #container input[type=color], 
+  #container input[type=date], 
+  #container input[type=datetime-local], 
+  #container input[type=datetime], 
+  #container input[type=email], 
+  #container input[type=month], 
+  #container input[type=number], 
+  #container input[type=password], 
+  #container input[type=search], 
+  #container input[type=tel], 
+  #container input[type=text], 
+  #container input[type=time], 
+  #container input[type=url], 
+  #container input[type=week], 
+  #container select, 
+  #container textarea {
+    font-size: 18px;
+  } 
+
+}
+
+
+@media screen and (min-width: 1080px) {
+
+  /* General ---------------------------------------------- */
+  #container input[type=color], 
+  #container input[type=date], 
+  #container input[type=datetime-local], 
+  #container input[type=datetime], 
+  #container input[type=email], 
+  #container input[type=month], 
+  #container input[type=number], 
+  #container input[type=password], 
+  #container input[type=search], 
+  #container input[type=tel], 
+  #container input[type=text], 
+  #container input[type=time], 
+  #container input[type=url], 
+  #container input[type=week], 
+  #container select, 
+  #container textarea {
+    font-size: 21px;
+  } 
 
 }
 
