--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,5 +1,46 @@
 /* --------------------------------------------------------------------------------------- */
-/* Master styles ---------------------------------------------- */
+/* Banner Title ---------------------------------------------- */
+/* --------------------------------------------------------------------------------------- */
+.home-banner-title {}
+.home-banner-title h1 {
+  font-size: 10vw;
+  color: transparent;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: $black;
+}
+.home-banner-title h3 {
+  font-family: $sans;
+  text-transform: uppercase;
+}
+
+
+/* --------------------------------------------------------------------------------------- */
+/* Banner Image ---------------------------------------------- */
+/* --------------------------------------------------------------------------------------- */
+.home-page-banner-image-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 15;
+  overflow: visible;
+  height: 100vw;
+  width: 75%;
+  max-width: 1400px;
+}
+.home-page-banner-image-container img {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  display: block;
+  width: 100%;
+  height: auto;
+  transform: translateY(-50%);
+}
+
+
+/* --------------------------------------------------------------------------------------- */
+/* Patents ---------------------------------------------- */
 /* --------------------------------------------------------------------------------------- */
 .patent-region {
   display: inline-block;
