--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,16 +1,43 @@
+body.the-duck-foot #header-spacer {display: none;}
+
 /* --------------------------------------------------------------------------------------- */
 /* Banner Title ---------------------------------------------- */
 /* --------------------------------------------------------------------------------------- */
-.home-banner-title {}
+.home-banner-title {
+  right: 5%;
+  width: 95%;
+  height: 100vh;
+  margin: 0 0 0 auto;
+  text-align: right;
+}
+.home-banner-title-container {
+  position: absolute;
+  top: 80px;
+  transform: translateY(10%);
+}
 .home-banner-title h1 {
-  font-size: 10vw;
+  margin: 0;
+  line-height: 0.9em;
+  font-size: 11vw;
+  font-weight: 800;
+  text-transform: uppercase;
+  text-shadow: -3px 3px 0px $primary;
   color: transparent;
   -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: $black;
 }
-.home-banner-title h3 {
+.home-banner-title h1 span {
+  display: block;
+  text-shadow: none;
+}
+.home-banner-title h2 {
+  width: 90%;
+  max-width: 420px;
+  margin: 16px 0 0 auto;
   font-family: $sans;
+  font-size: 1.125em;
+  line-height: 1.125em;
   text-transform: uppercase;
 }
 
@@ -24,19 +51,138 @@
   top: 0;
   z-index: 15;
   overflow: visible;
-  height: 100vw;
-  width: 75%;
+  height: 100vh;
+  width: 120%;
   max-width: 1400px;
+  pointer-events: none;
 }
 .home-page-banner-image-container img {
   position: absolute;
-  left: 0;
-  top: 50%;
+  left: -156px;
+  top: 65%;
   display: block;
-  width: 100%;
+  width: 80vh;
   height: auto;
+  transform: translate(0,-50%);
+}
+
+
+/* --------------------------------------------------------------------------------------- */
+/* Second screen content ---------------------------------------------- */
+/* --------------------------------------------------------------------------------------- */
+#home-main.bg-primary {background: none;}
+.home-banner-primary-spacer {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  background: $primary;
   transform: translateY(-50%);
 }
+.home-banner-primary-spacer:before,
+.home-banner-primary-spacer:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 128px;
+  background: $primary;
+}
+.home-banner-primary-spacer:before {
+  bottom: 99%;
+  clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
+}
+.home-banner-primary-spacer:after {
+  top: 99%;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%);
+}
+
+
+/* --------------------------------------------------------------------------------------- */
+/* Crop Listings ---------------------------------------------- */
+/* --------------------------------------------------------------------------------------- */
+ul.applicable-crops {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+ul.applicable-crops li.crop-listing {
+  position: relative;
+  display: block;
+  width: 200px;
+  height: 200px;
+  margin-left: 32px;
+}
+ul.applicable-crops li.crop-listing:first-child,
+ul.applicable-crops li.crop-listing:nth-child(12) {
+  margin-left: 0;
+}
+ul.applicable-crops li.crop-listing:nth-child(7) {margin-left: 128px;}
+.crop-photo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: $light;
+  transform: translate(-50%,-50%) scale(1);
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+.crop-listing:hover .crop-photo {transform: translate(-50%,-50%) scale(1.25);}
+.crop-photo img {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-position: center center;
+  object-fit: cover;
+}
+.crop-text-bg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: $white;
+  transform: translate(-50%,-50%) scale(0);
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+.crop-listing:hover .crop-text-bg {transform: translate(-50%,-50%) scale(0.75)}
+.crop-text {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  transform: translateY(-50%);
+  text-align: center;
+  opacity: 0;
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+.crop-text.crop-text-no-img {opacity: 1;}
+.crop-listing:hover .crop-text {opacity: 1;}
+.crop-text p {
+  font-family: $sans;
+  font-weight: 600;
+  line-height: 1em;
+  text-transform: uppercase;
+}
+
 
 
 /* --------------------------------------------------------------------------------------- */
@@ -51,9 +197,64 @@
 .patent-region ul li {display: block;}
 
 
+
+
+@media screen and (max-height: 700px) {
+
+  .home-banner-title-container {transform: translateY(0);}
+
+}
+
+
+
+@media screen and (min-width: 767px) {
+
+  /* Banner Title ---------------------------------------------- */
+  /* --------------------------------------------------------------------------------------- */
+  .home-banner-title h1 {
+    line-height: 0.9em;
+    font-size: 9.5vw;
+    text-shadow: -4px 4px 0px $primary;
+  }
+  .home-banner-title h2 {margin-top: 21px;}  
+
+}
+
+
+@media screen and (min-width: 900px) {
+
+   .home-banner-title {padding-top: 128px;}
+
+}
+
+
 @media screen and (min-width: 1080px) {
 
-  /* General ---------------------------------------------- */
+  /* Banner Title ---------------------------------------------- */
+  /* --------------------------------------------------------------------------------------- */
+  .home-banner-title {right: 40px; width: 80%;}
+  .home-banner-title-container {
+    position: relative;
+    top: initial;
+    transform: translateY(0);
+  }
+  .home-banner-title h1 {
+    font-size: 8vw;
+    text-shadow: -6px 6px 0px $primary;
+    -webkit-text-stroke-width: 2px;
+  }
+  .home-banner-title h2 {max-width: 528px;} 
+
+  /* Banner Image ---------------------------------------------- */
+  /* --------------------------------------------------------------------------------------- */
+  .home-page-banner-image-container {width: 75%;}
+  .home-page-banner-image-container img {top: 75%; width: 100%;}
+
+  /* Second screen content ---------------------------------------------- */
+  /* --------------------------------------------------------------------------------------- */
+  #home-main.bg-primary {background: none;}
+  .home-main-content {width: 50%; margin: 0 0 0 auto;}
+  .home-banner-primary-spacer:before, .home-banner-primary-spacer:after {height: 256px;}
   
 
 }
