--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -151,34 +151,26 @@ p:last-child {margin-bottom: 0;}
 .white-text {color: $white;}
 .black-text {color: $black;}
 
-h1, h2 {
+h1, h2, h3, h4, h5, h6 {
   position: relative;
+  display: block;
+  font-weight: 500;
+}
+
+.title-wrap h1, .title-wrap h2 {
   display: inline;
   border-bottom: 4px solid transparent;
   background-image: linear-gradient($primary,$primary);
   background-size: 100% 16px;
   background-repeat: no-repeat;
   background-position: left calc(100% + 0px);
-  font-weight: 500;
-  -webkit-transition: all 0.25s ease;
-  -moz-transition: all 0.25s ease;
-  -o-transition: all 0.25s ease;
-  transition: all 0.25s ease;
 }
-.bg-primary h1, .bg-primary h2 {background-image: linear-gradient($white,$white);}
-.bg-secondary h1, .bg-secondary h2 {background-image: linear-gradient($white,$white);}
-.bg-grey h1, .bg-grey h2 {background-image: linear-gradient($light,$light);}
-.bg-dark h1, .bg-dark h2 {color: $primary; background-image: linear-gradient($black,$black);}
-.bg-black h1, .bg-black h2 {color: $primary; background-image: linear-gradient($dark,$dark);}
-h3, h4, h5, h6 {
-  position: relative;
-  display: block;
-  font-weight: 500;
-  -webkit-transition: all 0.25s ease;
-  -moz-transition: all 0.25s ease;
-  -o-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-}
+.bg-primary .title-wrap h1, .bg-primary .title-wrap h2 {background-image: linear-gradient($white,$white);}
+.bg-secondary .title-wrap h1, .bg-secondary .title-wrap h2 {background-image: linear-gradient($white,$white);}
+.bg-grey .title-wrap h1, .bg-grey .title-wrap h2 {background-image: linear-gradient($light,$light);}
+.bg-dark .title-wrap h1, .bg-dark .title-wrap h2 {color: $primary; background-image: linear-gradient($black,$black);}
+.bg-black .title-wrap h1, .bg-black .title-wrap h2 {color: $primary; background-image: linear-gradient($dark,$dark);}
+
 h1, h2, .title-wrap {margin-bottom: 24px;}
 h3 {margin-bottom: 12px;}
 h4, h5, h6 {margin-bottom: 0;}
@@ -192,7 +184,9 @@ h5 + .title-wrap, h5 + h3, h5 + h4, h5 + h6,
 h6 + .title-wrap, h6 + h3, h6 + h4, h6 + h5 {
   margin-top: 0;
 }
-h1, h2 {font-size: 2.125em; line-height: 1.125em;}
+
+h1, h2 {font-size: 2.125em; line-height: 0.9em;}
+.title-wrap h1, .title-wrap h2 {font-size: 2.125em; line-height: 1.125em;}
 h3 {font-size: 1.875em; line-height: 1.05em;}
 h4 {font-size: 1.333em; line-height: 1.25em;}
 h5 {font-size: 1.125em; line-height: 1.15em; text-transform: uppercase;}
@@ -208,6 +202,8 @@ h1 em, h2 em, h3 em, h4 em, h5 em, h6 em {
   text-transform: initial;
   color: $primary;
 }
+
+.title-half {max-width: 700px;}
 
 h2 + ul, h3 + ul, h4 + ul,
 h2 + ol, h3 + ol, h4 + ol {margin-top: 0 !important;}
@@ -448,7 +444,7 @@ header .button-duck-walk svg {fill: $dark;}
 @media screen and (min-width: 540px) {
 
   body {font-size: 16px;}
-  h1, h2 {background-size: 100% 18px;}
+  .title-wrap h1, .title-wrap h2 {background-size: 100% 18px;}
   .long-text ul li:before {transform: translateY(1px) scale(0.825);}
   .long-text a:not(.button):hover {background-size: 100% 10px;}
 
@@ -481,7 +477,7 @@ header .button-duck-walk svg {fill: $dark;}
 
   /* General ---------------------------------------------- */
   body {font-size: 18px;} 
-  h1, h2 {background-size: 100% 20px;}
+  .title-wrap h1, .title-wrap h2 {background-size: 100% 20px;}
   .long-text ul li:before {transform: translateY(1px) scale(0.9);}
   ol li:before {top: 0.03em;}
   .long-text a:not(.button):hover {background-size: 100% 11px;}
@@ -494,7 +490,7 @@ header .button-duck-walk svg {fill: $dark;}
 
   /* General ---------------------------------------------- */
   body {font-size: 21px;} 
-  h1, h2 {background-size: 100% 24px;}
+  .title-wrap h1, .title-wrap h2 {background-size: 100% 24px;}
   .long-text ul li:before {transform: translateY(-2px) scale(1);}
   ol li:before {top: 0.01em;}
   .long-text a:not(.button):hover {background-size: 100% 13px;}
